add pacotes radian e stemgraphic

--- a/Aula1/julio/explorando-aula1.ipynb
+++ b/Aula1/julio/explorando-aula1.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1ebc5930",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,209 @@
     "# - destination: categórica nominal\n",
     "# - travel_count_no_factor: quantitativa discreta\n",
     "# - travel_count_fix_factor: quantitativa discreta\n",
-    "# - travell_count_adap_factor: quantitativa discreta"
+    "# - travel_count_adap_factor: quantitativa discreta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a15755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31merror\u001b[0m: \u001b[1mexternally-managed-environment\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m This environment is externally managed\n",
+      "\u001b[31m╰─>\u001b[0m To install Python packages system-wide, try apt install\n",
+      "\u001b[31m   \u001b[0m python3-xyz, where xyz is the package you are trying to\n",
+      "\u001b[31m   \u001b[0m install.\n",
+      "\u001b[31m   \u001b[0m \n",
+      "\u001b[31m   \u001b[0m If you wish to install a non-Debian-packaged Python package,\n",
+      "\u001b[31m   \u001b[0m create a virtual environment using python3 -m venv path/to/venv.\n",
+      "\u001b[31m   \u001b[0m Then use path/to/venv/bin/python and path/to/venv/bin/pip. Make\n",
+      "\u001b[31m   \u001b[0m sure you have python3-full installed.\n",
+      "\u001b[31m   \u001b[0m \n",
+      "\u001b[31m   \u001b[0m If you wish to install a non-Debian packaged Python application,\n",
+      "\u001b[31m   \u001b[0m it may be easiest to use pipx install xyz, which will manage a\n",
+      "\u001b[31m   \u001b[0m virtual environment for you. Make sure you have pipx installed.\n",
+      "\u001b[31m   \u001b[0m \n",
+      "\u001b[31m   \u001b[0m See /usr/share/doc/python3.12/README.venv for more information.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
+      "\u001b[1;36mhint\u001b[0m: See PEP 668 for the detailed specification.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'stemgraphic'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m \u001b[38;5;66;03m#biblioteca de visualização de dados\u001b[39;00m\n\u001b[32m     17\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mpip install stemgraphic\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstemgraphic\u001b[39;00m \u001b[38;5;66;03m#biblioteca para elaboração do gráfico de ramo-e-folhas\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstats\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m norm \u001b[38;5;66;03m#para plotagem da distribuição normal no histograma\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'stemgraphic'"
+     ]
+    }
+   ],
+   "source": [
+    "# adaptar para a base de mobilidade do RJ\n",
+    "\n",
+    "##############################################################################\n",
+    "#                     MANUAL DE ANÁLISE DE DADOS                             #\n",
+    "#                Luiz Paulo Fávero e Patrícia Belfiore                       #\n",
+    "#                            Capítulo 02                                     #\n",
+    "##############################################################################\n",
+    "\n",
+    "##############################################################################\n",
+    "#                     IMPORTAÇÃO DOS PACOTES NECESSÁRIOS                     #\n",
+    "##############################################################################\n",
+    "\n",
+    "import pandas as pd #manipulação de dados em formato de dataframe\n",
+    "import numpy as np #biblioteca para operações matemáticas multidimensionais\n",
+    "from scipy.stats import skew #cálculo da assimetria\n",
+    "from scipy.stats import kurtosis #cálculo da curtose\n",
+    "import seaborn as sns #biblioteca de visualização de informações estatísticas\n",
+    "import matplotlib.pyplot as plt #biblioteca de visualização de dados\n",
+    "import stemgraphic #biblioteca para elaboração do gráfico de ramo-e-folhas\n",
+    "from scipy.stats import norm #para plotagem da distribuição normal no histograma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f5ab1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tabela de frequências absolutas (contagem) e relativas (%) da variável 'preco'\n",
+    "contagem = df_cotacoes['preco'].value_counts()\n",
+    "percent = df_cotacoes['preco'].value_counts(normalize=True)\n",
+    "pd.concat([contagem, percent], axis=1, keys=['contagem', '%'], sort=True)\n",
+    "\n",
+    "# Estatísticas descritivas univariadas da variável 'preco'\n",
+    "df_cotacoes['preco'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec96ff65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Medidas de assimetria e curtose para a variável 'preco'\n",
+    "skew(df_cotacoes, axis=0, bias=True) # igual ao Stata\n",
+    "skew(df_cotacoes, axis=0, bias=False) # igual ao SPSS\n",
+    "kurtosis(df_cotacoes, axis=0, bias=False) # igual ao SPSS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64fb282d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############################################################################\n",
+    "#   GRÁFICOS: HISTOGRAMA, RAMO-E-FOLHAS E BOXPLOT PARA A VARIÁVEL 'preco'    #\n",
+    "##############################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107ca6ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histograma\n",
+    "plt.figure(figsize=(15,10))\n",
+    "sns.histplot(data=df_cotacoes, x='preco', bins=7, color='darkorchid')\n",
+    "plt.xlabel('Preço', fontsize=20)\n",
+    "plt.ylabel('Frequência', fontsize=20)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "935b0a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histograma com Kernel density estimation (KDE)\n",
+    "plt.figure(figsize=(15,10))\n",
+    "sns.histplot(data=df_cotacoes, x='preco', kde=True, bins=7, color='darkorchid')\n",
+    "plt.xlabel('Preço', fontsize=20)\n",
+    "plt.ylabel('Frequência', fontsize=20)\n",
+    "plt.legend(['Kernel density estimation (KDE)'], fontsize=17)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17dcd271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histograma com curva normal\n",
+    "plt.figure(figsize=(15,10))\n",
+    "mu, std = norm.fit(df_cotacoes['preco'])\n",
+    "plt.hist(df_cotacoes['preco'], bins=7, density=True, alpha=0.6, color='silver')\n",
+    "xmin, xmax = plt.xlim()\n",
+    "x = np.linspace(xmin, xmax, 100)\n",
+    "p = norm.pdf(x, mu, std)\n",
+    "plt.plot(x, p, 'k', linewidth=2, color='darkorchid')\n",
+    "plt.xlabel('Preço', fontsize=20)\n",
+    "plt.ylabel('Densidade', fontsize=20)\n",
+    "plt.legend(['Curva Normal'], fontsize=17)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a8e29f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gráfico de ramo-e-folhas para a variável 'preco'\n",
+    "stemgraphic.stem_graphic(df_cotacoes['preco'], scale = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "422cbca7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplot da variável 'preco' - pacote 'matplotlib'\n",
+    "plt.figure(figsize=(15,10))\n",
+    "plt.boxplot(df_cotacoes['preco'])\n",
+    "plt.title('Preço', fontsize=17)\n",
+    "plt.ylabel('Preço', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ed60fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplot da variável 'preco' - pacote 'seaborn'\n",
+    "plt.figure(figsize=(15,10))\n",
+    "sns.boxplot(df_cotacoes['preco'], linewidth=2, orient='v', color='purple')\n",
+    "sns.stripplot(df_cotacoes['preco'], color=\"orange\", jitter=0.1, size=7)\n",
+    "plt.title('Preço', fontsize=17)\n",
+    "plt.xlabel('Preço', fontsize=16)\n",
+    "plt.show()"
    ]
   }
  ],
